syntax = "proto3";

package proto.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/epictris/go/gen/proto/v1;apiv1";

message GetUserRequest {
	int64 user_id = 1 [(buf.validate.field).required = true];
}

message GetUserResponse {
	string email = 1 [(buf.validate.field).string.email = true];
}
